man I want to sleep

--- a/Assets/SimpleLocalization/Resources/Localization/MG 1.csv
+++ b/Assets/SimpleLocalization/Resources/Localization/MG 1.csv
@@ -203,26 +203,26 @@ TutorialText1,Inspect the object by tapping it.,Untersuche das Objekt in dem du 
 TutorialText2,Move the camera by dragging.,Bewege die Kamera in dem du über den Bildschirm wischt ,Move the camera by dragging,Bewege die Kamera in dem du über den Bildschirm wischt,
 TutorialText3,"With this button, you can get back to the main menu",Hiermit kommst du zurück ins Hauptmenü,"With this button, you can get back to the main menu",Hiermit kommst du zurück ins Hauptmenü,
 ,,,,,
-QuestionCompleted,Question Cleared,Frage abgeschlossen,Question Cleared,Frage abgeschlossen,
+QuestionCompleted,Question Cleared!,Frage abgeschlossen!,Question Cleared!,Frage abgeschlossen!,
 ,,,,,
 Declined.1,This is not Johan Maurits.,Das ist nicht Johann Moritz.,This is not Johan Maurits.,Das ist nicht Johann Moritz.,
 Declined.2,This is not a guest. ,Das ist kein Gast. ,This is not a guest. ,Das ist kein Gast. ,
 Declined.3,The symbol is not visible here.,Hier ist das Symbol nicht zu sehen.,The symbol is not visible here.,Hier ist das Symbol nicht zu sehen.,
 ,,,,,
 NQ.Question,Would you like to proceed to the next question?,Möchtest du zur nächsten Frage springen?,Would you like to proceed to the next question?,Möchtest du zur nächsten Frage springen?,
-NQ.Question2,You found * out of + objects so far.,Du hast * von + Objekten bisher gefunden.,You found * out of + objects so far.,Du hast * von + Objekten bisher gefunden.,
-NQ.Yes,"Yes, Proceed","Ja, Weiter","Yes, Proceed","Ja, Weiter",
-NQ.No,"No, Stay!",Hier bleiben!,"No, Stay!",Hier bleiben!,
+NQ.Question2,You found * out of + objects so far.,Du hast bisher * von + Objekten gefunden.,You found * out of + objects so far.,Du hast bisher * von + Objekten gefunden.,
+NQ.Yes,"Yes, proceed!","Ja, weiter!","Yes, proceed!","Ja, weiter!",
+NQ.No,"No, stay!",Hier bleiben!,"No, stay!",Hier bleiben!,
 ,,,,,
 Book.Question,Do you want to return to the book?,Möchtest du zum Buch zurückkehren?,Do you want to return to the book?,Möchtest du zum Buch zurückkehren?,
-Book.Yes,Go back to Book,Ich möchte zrück zum Buch,Go back to Book,Ich möchte zurück zum Buch,
-Book.No,I want to stay,Ich möchte bleiben,I want to stay,Ich möchte bleiben,
+Book.Yes,Go back to book.,Ich möchte zrück zum Buch.,Go back to book.,Ich möchte zurück zum Buch.,
+Book.No,I want to stay.,Ich möchte bleiben.,I want to stay.,Ich möchte bleiben.,
 ,,,,,
 TapAnywhere,Tap anywhere to continue,"Tippe irgendwo, um fortzufahren",Tap anywhere to continue,"Tippe irgendwo, um fortzufahren",
 ,,,,,
-PS.Tutorial1,Tap here to see what else you can find!,"Tippe hier, um zu sehen, was du noch finden kannst!",Tap here to see what else you can find!,"Tippe hier, um zu sehen was du noch finden kannst!",
+PS.Tutorial1,Tap here to see what else you can find!,"Tippe hier, um zu sehen was du noch finden kannst!",Tap here to see what else you can find!,"Tippe hier, um zu sehen was du noch finden kannst!",
 PS.Tutorial2,Here  you see the questions objectives or sum,?????????????????????????????????????????????????,Here  you see the questions objectives or sum,Here  you see the questions objectives or sum,
 ,,,,,
-Final.Question,You found enough objects do you want to end the game?,,,,
-Final.Yes,Yes end my misery.,,,,
-Final.No,No I want to catch them all! ,,,,
+Final.Question,You cleared all questions! Do you want to go back to the book?,Du hast alle Fragen abgeschlossen! Möchtest du zum Buch zurückkehren?,You cleared all questions! Do you want to go back to the book?,Du hast alle Fragen abgeschlossen! Möchtest du zum Buch zurückkehren?,
+Final.Yes,"Yes, take me back to the book!",Ich möchte zurück zum Buch.,"Yes, take me back to the book!",Ich möchte zurück zum Buch!,
+Final.No,No I want to continue!,Ich möchte bleiben.,No I want to continue!,Ich möchte bleiben.,
