Book button localization

--- a/Assets/SimpleLocalization/Resources/Localization/MG 1.csv
+++ b/Assets/SimpleLocalization/Resources/Localization/MG 1.csv
@@ -253,8 +253,10 @@ Book.No,I want to stay.,Ich möchte bleiben.,I want to stay.,Ich möchte bleiben
 TapAnywhere,Tap anywhere to continue,"Tippe irgendwo, um fortzufahren",Tap anywhere to continue,"Tippe irgendwo, um fortzufahren",
 ,,,,,
 PS.Tutorial1,Tap here to see what else you can find!,"Tippe hier, um zu sehen, was du noch finden kannst!",Tap here to see what else you can find!,"Tippe hier, um zu sehen, was du noch finden kannst!",
-PS.Tutorial2,Tap here for more context to the current question,Tippe hier für mehr informationen zur aktuellen Frage.,Tap here for more context to the current question,Tippe hier für mehr informationen zur aktuellen Frage.,
+PS.Tutorial2,Tap here for more context to the current question,Tippe hier für mehr Informationen zur aktuellen Frage.,Tap here for more context to the current question,Tippe hier für mehr Informationen zur aktuellen Frage.,
 ,,,,,
 Final.Question,You cleared all questions! Do you want to go back to the book?,Du hast alle Fragen abgeschlossen! Möchtest du zum Buch zurückkehren?,You cleared all questions! Do you want to go back to the book?,Du hast alle Fragen abgeschlossen! Möchtest du zum Buch zurückkehren?,
 Final.Yes,"Yes, take me back to the book!",Ich möchte zurück zum Buch.,"Yes, take me back to the book!",Ich möchte zurück zum Buch!,
 Final.No,No I want to continue!,Ich möchte bleiben.,No I want to continue!,Ich möchte bleiben.,
+,,,,,
+BookButton,Book,Buch,Book,Buch,
