schubsung von kram

--- a/Assets/SimpleLocalization/Resources/Localization/MG 1.csv
+++ b/Assets/SimpleLocalization/Resources/Localization/MG 1.csv
@@ -11,7 +11,7 @@ Symbol finden?","Where can you
 find this symbol?","Wo kannst du dieses
 Symbol finden?",
 ,,,,,
-Mg1.Q1Hint,"Johan Maurits van Nassau-Siegen is the owner of this palace called 'Vrijburg'. 
+Mg1.Q1Hint,"Johan Maurits van Nassau-Siegen owns this palace called 'Vrijburg'. 
 
 Find him to learn more!","Johann Moritz von Nassau-Siegen ist der Inhaber dieses Palastes namens 'Vrijburg'. 
 
@@ -20,8 +20,8 @@ Finde ihn, um mehr zu erfahren!","Johan Maurits van Nassau-Siegen is the owner o
 Find him to learn more!","Dieser Palast hat Johann Moritz von Nassau-Siegen gehört! 
 
 Finde ihn, um mehr zu erfahren!",
-Mg1.Q2Hint,"Johan Maurits had many guests at his palace in brazil. 
-Many among them were renommated artists amd scientists that are still known today!
+Mg1.Q2Hint,"Johan Maurits had many guests at his palace in Brazil. 
+Many among them were renominated artists and scientists that are still known today!
 
 Who looks like they might be a guest?","Johann Moritz hatte in seinem Palast in Brasilien zahlreiche Gäste.
 Darunter waren auch renommierte Künstler und Wissenschaftler, die bis heute bekannt sind! 
@@ -33,8 +33,8 @@ Who looks like they might be a guest?","Johann Moritz hatte in seinem Palast in 
 Darunter waren auch Künstler und Wissenschaftler, die bis heute bekannt sind! 
 
 Wer sieht so aus, als sei er zu Gast?",
-Mg1.Q3Hint,"To demonstrate his influence, Johan Maurits marked his ""possessions"" with this symbol. 
-This included not only objects but also enslaved individuals who were forced into unfree labor at his palace. 
+Mg1.Q3Hint,"Johan Maurits marked his ""possessions"" with this symbol to demonstrate his influence. 
+This included objects and enslaved individuals who were forced into unfree labor at his palace. 
 
 Find them to learn more!","Als Zeichen seines Einflusses hat Johann Moritz seine ""Besitzümer"" mit seinem Symbol markiert. 
 Dies schloss damals neben Objekten auch versklavte Personen ein, die zu unfreier Arbeit an seinem Palast gezwungen wurden. 
@@ -48,7 +48,7 @@ Damals wurden neben Gegenständen auch versklavte Personen, die gezwungen wurden
 Finde sie um mehr zu erfahren!",
 ,,,,,
 G0.Title,Enslaved Person,Versklavte Person,Enslaved Person,Versklavte Person,
-G0.Description,That is not a visitor. This is an enslaved person from Africa who is performing unfree labor in Johan Maurits's palace in the Dutch colony in Brazil.,"Das ist kein:e Besucher:in. Das ist eine versklavte Person aus Afrika, die in Johann Moritz' Palast in der niederländischen Kolonie in Brasilien unfreie Arbeit leistet.",That is not a visitor. It is an enslaved person from Africa who is being forced to work in Johan Maurits's palace in the Dutch colony in Brazil.,"Das ist kein:e Besucher:in. Das ist eine versklavte Person aus Afrika, die in Johann Moritz' Palast in der niederländischn Kolonie in Brasilien unfreie Arbeit leistet.",
+G0.Description,This is not a visitor. This is an enslaved person from Africa who is performing unfree labor in Johan Maurits's palace in the Dutch colony in Brazil.,"Das ist kein:e Besucher:in. Das ist eine versklavte Person aus Afrika, die in Johann Moritz' Palast in der niederländischen Kolonie in Brasilien unfreie Arbeit leistet.",That is not a visitor. It is an enslaved person from Africa who is being forced to work in Johan Maurits's palace in the Dutch colony in Brazil.,"Das ist kein:e Besucher:in. Das ist eine versklavte Person aus Afrika, die in Johann Moritz' Palast in der niederländischn Kolonie in Brasilien unfreie Arbeit leistet.",
 ,,,,,
 G1.Title,Johan Maurits,Johann Moritz,Johan Maurits,Johann Moritz,
 G1.Description,"Johan Maurits of Nassau-Siegen was born in Siegen in 1604. 
@@ -64,7 +64,7 @@ Als er erwachsen war wurde er von der internationalen Handelsgesellschaft WIC, f
 G2.Title,Frans Post,Frans Post,Frans Post,Frans Post,
 G2.Description,"Frans Post, the brother of Pieter Post, was a Dutch painter of the 17th century. 
 
-He accompanied Johan Maurits as part of his entourage in 1637 on his expedition to Brazil. There, he mainly created landscape paintings.","Frans Post war ein niederländischer Maler des 17ten Jahrhunderts. 
+He accompanied Johan Maurits as part of his entourage 1637 on his expedition to Brazil. There, he mainly created landscape paintings.","Frans Post war ein niederländischer Maler des 17ten Jahrhunderts. 
 
 Er begleitete Johann Moritz als Teil seines Gefolges 1637 auf dessen Expedition nach Brasilien. 
 Dort fertigte er hauptsächlich Landschaftsmalereien an.","Frans Post was an artist from Holland. 
@@ -87,7 +87,7 @@ He also found out many things about brazilian medicine and nature that were impo
 Die waren sehr wichtig, als unsere heutige Tropenmedizin erfunden wurde. ",
 ,,,,,
 G6.Title,Gaspar Dias Ferreira,Gaspar Dias Ferreira ,Gaspar Dias Ferreira,Gaspar Dias Ferreira,
-G6.Description,"Gaspar Dias Ferreira was a merchant and part of the luso-Brazilian elite. He is sometimes referred to as Johan Maurits' right-hand man. Due to the representation of both major colonist nations, their collaboration was fruitful and lucrative for both - though not always completely legal. ",Gaspar Dias Ferreira war als Kaufmann Teil der luso-brasilianischen Elite und wurde als Johann Moritz’ Rechte Hand angesehen. Diese Zusammenarbeit war durch die Repräsentation beider Besatzer Nationalitäten zweiseitig vorteilhaft und lukrativ - nicht selten auch abseits der legalen Handelswege.,"Gaspar Dias Ferreira was a Portuguese merchant, and worked together with Johan Maurits. They both made a lot of money because they collaborated - but it was not always legal. ","Gaspar Dias Ferreira war ein portugiesischer Kaufmann und hat mit Johann Moritz zusammengearbeitet. Beide haben dadurch viel Geld verdient, allerdings nicht immer legal!",
+G6.Description,"Gaspar Dias Ferreira was a merchant and part of the Luso-Brazilian elite. He is sometimes referred to as Johan Maurits' right-hand man. Due to the representation of both major colonist nations, their collaboration was fruitful and lucrative for both - though not always completely legal. ",Gaspar Dias Ferreira war als Kaufmann Teil der luso-brasilianischen Elite und wurde als Johann Moritz’ Rechte Hand angesehen. Diese Zusammenarbeit war durch die Repräsentation beider Besatzer Nationalitäten zweiseitig vorteilhaft und lukrativ - nicht selten auch abseits der legalen Handelswege.,"Gaspar Dias Ferreira was a Portuguese merchant, and worked together with Johan Maurits. They both made a lot of money because they collaborated - but it was not always legal. ","Gaspar Dias Ferreira war ein portugiesischer Kaufmann und hat mit Johann Moritz zusammengearbeitet. Beide haben dadurch viel Geld verdient, allerdings nicht immer legal!",
 ,,,,,
 I1.Title,Insignia,,,,
 I1.Description,Johan Maurits used this symbol to mark his possessions.,Johann Moritz markierte mit diesem Symbol seine Besitztümer.,Johan Maurits used this symbol to mark his possessions.,Johann Moritz markierte mit diesem Symbol alles was ihm gehörte.,
@@ -140,7 +140,7 @@ Dieser brasilianische Junge wurde gegen seinen Willen von seinem Zuhause geholt 
 I6.Title,Man,Mann,Man,Mann,
 I6.Description,"Johan Maurits used this symbol to mark his ""possessions"". 
 
-This man was enslaved and brought overseas from Africa. He was one of ca. 23.500 enslaved people that were brought to Dutch Brazil during Johan Maurits' time as governor of the Dutch colony (1636-1645).","Johann Moritz markierte mit diesem Symbol seine ""Besitztümer"".
+This man was enslaved and brought overseas from Africa. He was one of ca. 23.500 enslaved people brought to Dutch Brazil during Johan Maurits' time as governor of the Dutch colony (1636-1645).","Johann Moritz markierte mit diesem Symbol seine ""Besitztümer"".
 
 Dieser Mann wurde versklavt und übersee aus Afrika geholt. Er war einer der etwa 23.500 versklavten Personen, die zu Johann Moritz' Amtszeit als Gouverneur der niederländischen Kolonie (1636-1645) nach Brasilien gebracht wurden.","Johan Maurits used this symbol to mark everything he ""owned"".
 
@@ -181,7 +181,7 @@ Besides sugar, the Dutch colony also sold a special type of wood called 'Brazilw
 Für die niederländische Kolonie in Brasilien war ein Holz namens ""brasilianisches Holz"" sehr wichtig. Es wurde an viele andere Länder verkauft. Dort wurde es benutzt, um rote Farbe für Stoffe herzustellen.",
 ,,,,,
 S0.Title,Historia Naturalis Brasiliae,Historia Naturalis Brasiliae,Historia Naturalis Brasiliae,Historia Naturalis Brasiliae,
-S0.Description,"This important book written by Willem Piso and Georg Marcgrave was considered one of the most relevant sources on Brazilian nature, medicine and ethnology for a long time. It contains 429 woodcut prints by Georg Marcgrave, depicting the most important natural objects.","Dieses wichtige Buch von Willem Piso und Georg Marggraf galt lange als eine der relevantesten Informationsquellen zur brasilianischen Flora und Fauna, Ethnologie, und Medizin. 429 Holzschnitte, erstellt von Georg Marggraf, bildeten die wichtigsten Naturgegenstände Brasiliens ab.","Willem Piso and Georg Marcgrave wrote this important book together. 
+S0.Description,"This important book by Willem Piso and Georg Marcgrave was considered one of the most relevant sources on Brazilian nature, medicine, and ethnology for a long time. It contains 429 woodcut prints by Georg Marcgrave, depicting the most important natural objects.","Dieses wichtige Buch von Willem Piso und Georg Marggraf galt lange als eine der relevantesten Informationsquellen zur brasilianischen Flora und Fauna, Ethnologie, und Medizin. 429 Holzschnitte, erstellt von Georg Marggraf, bildeten die wichtigsten Naturgegenstände Brasiliens ab.","Willem Piso and Georg Marcgrave wrote this important book together. 
 It was very interesting for many people long afterwards, because it contais a lot of information on and pictures of brazilian nature, animals, medicine, and inhabitants. ","Willem Piso und Georg Marggraf haben zusammen dieses wichtige Buch geschrieben. Es war noch sehr lange sehr wichtig für andere Leute, weil es viele Informationen und Bilder von Pflanzen, Tieren, Medizin und Einwohnern in Brasilien enthält.","Dieses UNFASSBAR wylde Buch hat gottlos viel Swag und wurde von den Machern schlechthin, namentlich Willem Piso (aka der Pisser) und Georg Marggraf (aka MC Megges) gemaked. Dieser fette Schmöker wurde für ne ganze Weile als die Top Informationsquelle Nummer 1 zu brasilianischem Grünzeug anerkannt. MC Megges, der Hustler, hat mies gegrinded und stolze 426 Bilder, die er erst auf Alpha-basis in ein Holzbrett geschnitzt hat, rausgeballert. In diesen Meisterwerken der Sonderklasse hat er mit seinem geschulten Auge die flysten und hippsten lokalen Gegenstände von der Brasilianischen Mommy Natur höchstpersönlich gecaptured."
 ,,,,,
 S1.Title,Johan Maurits Portrait,Johann Moritz Porträt,Johan Maurits Portrait,Johann Moritz Porträt,
