--- a/Assets/SimpleLocalization/Resources/Localization/MG 2.csv
+++ b/Assets/SimpleLocalization/Resources/Localization/MG 2.csv
@@ -190,7 +190,7 @@ Diese Pläne zeigen ein niederländisch aussehenden Haus. Johann Moritz hat viel
 Johann hat viele Dinge aus seiner Heimat nach Brasilien bringen lassen, um die Umgebung wie Europa aussehen zu lassen. Dazu gehören Lebensmittel, Tiere, und Pflanzen wie zum Beispiel der  Orangenbaum.
 
 Mit dem Schiff gelieferte Sachen wurden im Hafen entladen. Versklavte Menschen auch. Eine Gruppe solcher Menschen muss stattdessen am Strand nach Mauritsstad gelaufen sein."
-MG2StoryTitle3,Johan Maurits and the sugar mill owners,Johann Moritz und die Zuckermühlenbesitzer,Johan Maurits and the sugar mill owners,Johann Moritz und die Zuckermühlenbesitzer
+MG2StoryTitle3,Gifts (?) for the sugar mill owners,Geschenke (?) für die Zuckermühlenbesitzer,Gifts (?) for the sugar mill owners,Geschenke (?) für die Zuckermühlenbesitzer
 MG2Story3,"""Isn't it so progressive of the hu-manist prince to allow freedom of belief in his colony?""
 
 ""I worry that Johan Maurits may be getting a little too nice toward the portuguese catholics who own the sugar farms.""
@@ -213,7 +213,7 @@ These papers document how Johan gifted a group of enslaved people to portuguese 
 ""Ich fürchte, dass Johann vielleicht zu nett zu den portugiesischen Katho-liken, denen die Zuckermühlen ge-hören, ist.""
 ""Hat er ihnen nicht auch neue Arbeiter für ihre Zuckermühlen ver-sprochen? Er scheint noch ein Schiff zu erwarten, das mehr versklavte Men-schen bringt.""
 Auf diesen Papieren wurde aufge-schrieben, wie eine Gruppe von ver-sklavten Menschen von Johann Moritz an portugiesische Zuckermühlen-besitzer verschenkt wurde."
-MG2StoryTitle4,Johan Maurits' various sources of income,Johann Moritz' vielfältige Einkommensquellen,Johan Maurits' various sources of income,Johann Moritz' vielfältige Einkommensquellen
+MG2StoryTitle4,Whealthy Johan Maurits,Wohlhabender Johann Moritz,Whealthy Johan Maurits,Wohlhabender Johann Moritz
 MG2Story4,"""I have an artist friend back in the Netherlands. Do you think Johan Maurits would fund him too?"" - some Guest in 'Vrijburg'.
 Artists traveling with Johan Maurits documented the Brazilian flora and fauna of the 17th century in great detail.
 ""I am so glad that our research on the local flora and fauna, medicine and all the other areas has made immense progress! It's all thanks to Johan's generous financial aid.""
